# fairoulette

./: README.md  api.py  build.sh  plan.txt  requirements.txt
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  python-publish.yml
client/: Readme.md
client/DoxyOutput/html/: annotated.html  classBondinator__pQueue-members.html  classBondinator__pQueue.html  classContainer-members.html  classContainer.html  classDoublyLinkedList-members.html  classDoublyLinkedList.html  classDoublyLinkedListInterface-members.html  classDoublyLinkedListNode-members.html  classDoublyLinkedListNode.html  classEmptyContainer.html  classEmptyItemProvided.html  classHashtable-members.html  classHashtableInterface.html  classInterface__DoublyLinkedListNode.html  classInterface__ListNode-members.html  classInterface__ListNode.html  classInterface__Stack.html  classItemAlreadyExisting-members.html  classItemAlreadyExisting.html  classItemNotFound-members.html  classList-members.html  classListNode-members.html  classListNodeInterface-members.html  classNoNextItem-members.html  classNoPrevItem-members.html  classPriorityQueueInterface-members.html  classPriorityQueueNodeInterface-members.html  classQueue-members.html  classQueue.html  classQueueInterface-members.html  classQueueInterface.html  classSetInterface-members.html  classSetNodeInterface-members.html  classSetNodeInterface.html  (+38 more)
client/include/: main.cpp
client/src/: .gitignore  client.py  client.spec  gui copy.py  gui.py
server/: .gitignore  CMakeLists.txt  Doxyfile  Readme.md
server/DoxyOutput/html/: classBondinator__List-members.html  classBondinator__List.html  classBondinator__dList-members.html  classBondinator__dList.html  classDoublyLinkedListInterface.html  classDoublyLinkedListNodeInterface-members.html  classDoublyLinkedListNodeInterface.html  classEmptyContainer-members.html  classEmptyItemProvided-members.html  classHashtable.html  classHashtableInterface-members.html  classInterface__DoublyLinkedListNode-members.html  classInterface__PriorityQueueNode-members.html  classInterface__PriorityQueueNode.html  classInterface__Stack-members.html  classItemNotFound.html  classList.html  classListInterface-members.html  classListInterface.html  classListNode.html  classListNodeInterface.html  classNoNextItem.html  classNoPrevItem.html  classPriorityQueue-members.html  classPriorityQueue.html  classPriorityQueueInterface.html  classPriorityQueueNode-members.html  classPriorityQueueNode.html  classPriorityQueueNodeInterface.html  classSetInterface.html  classStack.html  container_8hpp_source.html  datatypes_2list_2listnode_8hpp_source.html  datatypes_2priority__queue_2priority__queue_8hpp_source.html  datatypes_2priority__queue_2priority__queuenode_8hpp_source.html  dir_023a734cc0fe4c88c594d0cf978364ec.html  dir_023b3a695203d3ed6ddeea76b3c5e478.html  dir_6626b324dfdbef8d0008b09e3e6c73b7.html  dir_9ec8237127891691dd79bfdee8b3649b.html  dir_b6a1b25c97174b03ee33ad89b32089b9.html  (+14 more)
server/DoxyOutput/html/search/: all_0.js  all_2.js  all_4.js  all_9.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js
server/extra/: .gitignore  database.py  models.py  python_bindings.cpp  server.py  sql.db  test.py
server/extra/database/: crud.py  database.py  models.py  schemas.py  sql.db
server/include/: randomizer.hpp
server/include/bet/: bet.hpp
server/include/exceptions/: datatypes.hpp
server/include/table/: table.hpp
server/src/: calculator.cpp  calculator_py.py  randomizer.cpp  server.py
server/src/bet/: bet.cpp
server/src/table/: table.cpp
server/tests/: test1.cpp
(+15 files in other folders)
